Fixing alignment on home page

--- a/src/client/components/Home/Home.less
+++ b/src/client/components/Home/Home.less
@@ -1,8 +1,24 @@
 @import "../../styles/variables.less";
 
+.home {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+ -ms-transform: translateY(-50%);
+ transform: translateY(-50%);
+  height:500px;
+  width:100%;
+}
 
-.home{
-  height:100vmax;
-  overflow:hidden;
-
+.home-box {
+    background-color: #ffffff;
+    padding: 40px 40px 70px 40px;
+    border-radius: 1px;
+    border-color:#ccc;
+    min-width:320px;
+    max-width: 500px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align:center;
 }
